cleaned taskeroo view to use clients
